--- a/POLLUTION_NOSQL_REPOSITORY/src/main/resources/application.properties
+++ b/POLLUTION_NOSQL_REPOSITORY/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=POLLUTION_NOSQL_REPOSITORY
+server.port=8083
+spring.data.mongodb.uri=mongodb://127.0.0.1:27017/measurements
