--- a/MOBILITY_SQL_REPOSITORY/src/main/resources/application.properties
+++ b/MOBILITY_SQL_REPOSITORY/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=MOBILITY_SQL_REPOSITORY
-spring.datasource.url=jdbc:mysql://localhost:3306/mobility
+spring.datasource.url=jdbc:mysql://localhost:3307/mobility
 spring.datasource.username=root
-spring.datasource.password=root
-server.port=8000
+spring.datasource.password=urbanAPIpassword
+server.port=8080
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
