--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,8 @@
             "mainClass": "es.uv.sersomon.MobilityNosqlRepositoryApplication",
             "projectName": "MOBILITY_NOSQL_REPOSITORY",
             "args": "",
-            "envFile": "${workspaceFolder}/.env"
+            "envFile": "${workspaceFolder}/.env",
+            "vmArgs": " -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=51650 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dspring.jmx.enabled=true -Djava.rmi.server.hostname=localhost -Dspring.application.admin.enabled=true -Dspring.boot.project.name=MOBILITY_NOSQL_REPOSITORY"
         },
         {
             "type": "java",
@@ -37,6 +38,16 @@
             "cwd": "${workspaceFolder}",
             "mainClass": "es.uv.sersomon.PollutionNosqlRepositoryApplication",
             "projectName": "POLLUTION_NOSQL_REPOSITORY",
+            "args": "",
+            "envFile": "${workspaceFolder}/.env"
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-MobilityApiApplication<MOBILITY_API>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "mainClass": "es.uv.sersomon.MobilityApiApplication",
+            "projectName": "MOBILITY_API",
             "args": "",
             "envFile": "${workspaceFolder}/.env"
         }
