--- a/POLLUTION_API/src/main/resources/application.properties
+++ b/POLLUTION_API/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=POLLUTION_API
 spring.profiles.default=local
 server.port=8085
+sys.token.issuer=sersomon
+# 1 hour
+sys.token.duration=3600000 
