--- a/MOBILITY_API/src/main/resources/application-local.properties
+++ b/MOBILITY_API/src/main/resources/application-local.properties
@@ -1,2 +1,3 @@
 app.repository.parkings.url = http://localhost:8082/api/v1
 app.repository.events.url = http://localhost:8083/api/v1
+app.repository.auth.url = http://localhost:8088/api/v1
