--- a/POLLUTION_API/src/main/resources/application-local.properties
+++ b/POLLUTION_API/src/main/resources/application-local.properties
@@ -1,3 +1,3 @@
 app.repository.stations.url = http://localhost:8080/api/v1
 app.repository.measurements.url = http://localhost:8081/api/v1
-sys.token.key=POLLUTION_API_KEY_LOCAL
+app.repository.auth.url = http://localhost:8088/api/v1
