--- a/MOBILITY_NOSQL_REPOSITORY/src/main/resources/application.properties
+++ b/MOBILITY_NOSQL_REPOSITORY/src/main/resources/application.properties
@@ -1,3 +1,2 @@
 spring.application.name=MOBILITY_NOSQL_REPOSITORY
-server.port=8083
-spring.data.mongodb.uri=mongodb://127.0.0.1:27018/events
+spring.profiles.default=local
