--- a/MOBILITY_SQL_REPOSITORY/src/main/resources/application.properties
+++ b/MOBILITY_SQL_REPOSITORY/src/main/resources/application.properties
@@ -1,8 +1,5 @@
 spring.application.name=MOBILITY_SQL_REPOSITORY
-spring.datasource.url=jdbc:mysql://localhost:3307/mobility
-spring.datasource.username=root
-spring.datasource.password=urbanAPIpassword
-server.port=8082
+spring.profiles.default=local
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
