--- a/POLLUTION_NOSQL_REPOSITORY/src/main/resources/application.properties
+++ b/POLLUTION_NOSQL_REPOSITORY/src/main/resources/application.properties
@@ -1,3 +1,2 @@
 spring.application.name=POLLUTION_NOSQL_REPOSITORY
-server.port=8081
-spring.data.mongodb.uri=mongodb://127.0.0.1:27017/measurements
+spring.profiles.default=local
