--- a/POLLUTION_SQL_REPOSITORY/src/main/resources/application.properties
+++ b/POLLUTION_SQL_REPOSITORY/src/main/resources/application.properties
@@ -1,11 +1,8 @@
 spring.application.name=POLLUTION_SQL_REPOSITORY
-spring.datasource.url=jdbc:mysql://localhost:3306/pollution
-spring.datasource.username=root
-spring.datasource.password=urbanAPIpassword
-server.port=8080
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
+spring.profiles.default=local
