--- a/MOBILITY_SQL_REPOSITORY/src/main/resources/application-k8s.properties
+++ b/MOBILITY_SQL_REPOSITORY/src/main/resources/application-k8s.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://mysql-mobility:3306/mobility
-spring.datasource.username=root
-spring.datasource.password=urbanAPIpassword
+spring.datasource.url=${MYSQL-MOBILITY}
+spring.datasource.username=${MYSQL-USERNAME}
+spring.datasource.password=${MYSQL-PASSWORD}
 server.port=8080
