--- a/K8S/deployments/persistence/mysql-mobility-deployment.yaml
+++ b/K8S/deployments/persistence/mysql-mobility-deployment.yaml
@@ -32,9 +32,12 @@ spec:
       - name: mysql-mobility
         image: mysql:8.0
         env:
-          - name: MYSQL_ROOT_PASSWORD
-            value: urbanAPIpassword
-          - name: MYSQL_DATABASE
-            value: mobility
+        - name: MYSQL_ROOT_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: mysql-secret
+              key: password
+        - name: MYSQL_DATABASE
+          value: mobility
         ports:
         - containerPort: 3306
