--- a/K8S/deployments/urban/aggregated-nosql-repository-deployment.yaml
+++ b/K8S/deployments/urban/aggregated-nosql-repository-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: aggregated-nosql-repository
+  namespace: urban
 spec:
   selector:
     app: aggregated-nosql-repository
@@ -15,6 +16,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: aggregated-nosql-repository
+  namespace: urban
 spec:
   selector:
     matchLabels:
@@ -29,7 +31,12 @@ spec:
       - name: aggregated-nosql-repository
         image: sersomon/aggregated_nosql_repository:latest
         env:
-          - name: SPRING_PROFILES_ACTIVE
-            value: k8s
+        - name: SPRING_PROFILES_ACTIVE
+          value: k8s
+        - name: MONGO-AGGREGATE
+          valueFrom:
+            configMapKeyRef:
+              name: persistence-url-configmap
+              key: mongo-aggregate
         ports:
         - containerPort: 8080
