--- a/K8S/deployments/urban/auth-api-deployment.yaml
+++ b/K8S/deployments/urban/auth-api-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: auth-api
+  namespace: urban
 spec:
   selector:
     app: auth-api
@@ -15,6 +16,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: auth-api
+  namespace: urban
 spec:
   selector:
     matchLabels:
