--- a/K8S/deployments/urban/mobility-nosql-repository.yaml
+++ b/K8S/deployments/urban/mobility-nosql-repository.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mobility-nosql-repository
+  namespace: urban
 spec:
   selector:
     app: mobility-nosql-repository
@@ -9,13 +10,13 @@ spec:
   - port: 8080
     targetPort: 8080
 
-
 ---
 
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mobility-nosql-repository
+  namespace: urban
 spec:
   selector:
     matchLabels:
@@ -32,5 +33,10 @@ spec:
         env:
         - name: SPRING_PROFILES_ACTIVE
           value: k8s
+        - name: MONGO-MOBILITY
+          valueFrom:
+            configMapKeyRef:
+              name: persistence-url-configmap
+              key: mongo-mobility
         ports:
         - containerPort: 8080
