--- a/K8S/deployments/urban/pollution-nosql-repository-deployment.yaml
+++ b/K8S/deployments/urban/pollution-nosql-repository-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: pollution-nosql-repository
+  namespace: urban
 spec:
   selector:
     app: pollution-nosql-repository
@@ -33,5 +34,10 @@ spec:
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: k8s
+            - name: MONGO-POLLUTION
+              valueFrom:
+                configMapKeyRef:
+                  name: persistence-url-configmap
+                  key: mongo-pollution
           ports:
           - containerPort: 8080
