--- a/MOBILITY_API/src/main/resources/application-k8s.properties
+++ b/MOBILITY_API/src/main/resources/application-k8s.properties
@@ -1,4 +1,4 @@
-app.repository.parkings.url = http://mobility-sql-repository:8080/api/v1
-app.repository.events.url = http://mobility-nosql-repository:8080/api/v1
-app.repository.auth.url = http://auth-api:8080/api/v1
+app.repository.parkings.url = ${MOBILITY-SQL-REPOSITORY}
+app.repository.events.url = ${MOBILITY-NOSQL-REPOSITORY}
+app.repository.auth.url = ${AUTH-API}
 server.port=8080
