--- a/MUNICIPAL_API/src/main/resources/application-k8s.properties
+++ b/MUNICIPAL_API/src/main/resources/application-k8s.properties
@@ -1,6 +1,6 @@
-app.service.parking.url = http://mobility-api:8080/api/v1
-app.service.station.url = http://pollution-api:8080/api/v1
-app.repository.auth.url = http://auth-api:8080/api/v1
+app.service.parking.url = ${MOBILITY-API}
+app.service.station.url = ${POLLUTION-API}
+app.repository.auth.url = ${AUTH-API}
 server.port=8080
-app.service.aggregate.nosql.url = http://aggregate-nosql-repository:8084/api/v1
+app.service.aggregate.nosql.url = ${AGGREGATED-NOSQL-REPOSITORY}
 app.jwt.key = ${APP.JWT.KEY}
