--- a/POLLUTION_API/src/main/resources/application-k8s.properties
+++ b/POLLUTION_API/src/main/resources/application-k8s.properties
@@ -1,4 +1,4 @@
-app.repository.stations.url = http://pollution-sql-repository:8080/api/v1
-app.repository.measurements.url = http://pollution-nosql-repository:8080/api/v1
-app.repository.auth.url = http://auth-api:8080/api/v1
+app.repository.stations.url = ${POLLUTION-SQL-REPOSITORY}
+app.repository.measurements.url = ${POLLUTION-NOSQL-REPOSITORY}
+app.repository.auth.url = ${AUTH-API}
 server.port=8080
