--- a/POLLUTION_SQL_REPOSITORY/src/main/resources/application-k8s.properties
+++ b/POLLUTION_SQL_REPOSITORY/src/main/resources/application-k8s.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://mysql-pollution:3306/pollution
-spring.datasource.username=root
-spring.datasource.password=urbanAPIpassword
+spring.datasource.url=${MYSQL-POLLUTION}
+spring.datasource.username=${MYSQL-USERNAME}
+spring.datasource.password=${MYSQL-PASSWORD}
 server.port=8080
