--- a/K8S/deployments/persistence/mongo-mobility-deployment.yaml
+++ b/K8S/deployments/persistence/mongo-mobility-deployment.yaml
@@ -8,11 +8,10 @@ spec:
   selector:
     app: mongo-mobility
   ports:
-  - port: 27017
-    targetPort: 27017
+    - port: 27017
+      targetPort: 27017
 
 ---
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -29,7 +28,14 @@ spec:
         function: persistence
     spec:
       containers:
-      - name: mongo-mobility
-        image: mongo:4.4.6
-        ports:
-        - containerPort: 27017
+        - name: mongo-mobility
+          image: mongo:4.4.6
+          ports:
+            - containerPort: 27017
+          volumeMounts:
+            - mountPath: /data/db
+              name: mongo-mobility-pvc-local
+      volumes:
+        - name: mongo-mobility-pvc-local
+          persistentVolumeClaim:
+            claimName: mongo-mobility-pvc-local
