--- a/AUTH_API/src/main/resources/application-local.properties
+++ b/AUTH_API/src/main/resources/application-local.properties
@@ -1,2 +1,5 @@
 sys.token.key=AUTH_API_KEY_LOCAL
 server.port=8088
+springdoc.api-docs.path=/api/v1/api-spec
+springdoc.swagger-ui.path=/api/v1/api-gui.html
+springdoc.swagger-ui.operationsSorter=method
