--- a/MOBILITY_API/src/main/resources/application-local.properties
+++ b/MOBILITY_API/src/main/resources/application-local.properties
@@ -2,3 +2,6 @@ app.repository.parkings.url = http://localhost:8082/api/v1
 app.repository.events.url = http://localhost:8083/api/v1
 app.repository.auth.url = http://localhost:8088/api/v1
 server.port=8086
+springdoc.api-docs.path=/api/v1/api-spec
+springdoc.swagger-ui.path=/api/v1/api-gui.html
+springdoc.swagger-ui.operationsSorter=method
