--- a/POLLUTION_API/src/main/resources/application-local.properties
+++ b/POLLUTION_API/src/main/resources/application-local.properties
@@ -2,3 +2,6 @@ app.repository.stations.url = http://localhost:8080/api/v1
 app.repository.measurements.url = http://localhost:8081/api/v1
 app.repository.auth.url = http://localhost:8088/api/v1
 server.port=8085
+springdoc.api-docs.path=/api/v1/api-spec
+springdoc.swagger-ui.path=/api/v1/api-gui.html
+springdoc.swagger-ui.operationsSorter=method
