--- a/POLLUTION_NOSQL_REPOSITORY/src/main/resources/application-local.properties
+++ b/POLLUTION_NOSQL_REPOSITORY/src/main/resources/application-local.properties
@@ -1,2 +1,5 @@
 server.port=8081
 spring.data.mongodb.uri=mongodb://127.0.0.1:27017/measurements
+springdoc.api-docs.path=/api/v1/api-spec
+springdoc.swagger-ui.path=/api/v1/api-gui.html
+springdoc.swagger-ui.operationsSorter=method
