--- a/AGGREGATED_NOSQL_REPOSITORY/src/main/resources/application-local.properties
+++ b/AGGREGATED_NOSQL_REPOSITORY/src/main/resources/application-local.properties
@@ -1,2 +1,5 @@
 server.port=8084
 spring.data.mongodb.uri=mongodb://127.0.0.1:27019/aggregate
+springdoc.api-docs.path=/api/v1/api-spec
+springdoc.swagger-ui.path=/api/v1/api-gui.html
+springdoc.swagger-ui.operationsSorter=method
