--- a/MOBILITY_SQL_REPOSITORY/src/main/resources/application-local.properties
+++ b/MOBILITY_SQL_REPOSITORY/src/main/resources/application-local.properties
@@ -2,3 +2,6 @@ spring.datasource.url=jdbc:mysql://localhost:3307/mobility
 spring.datasource.username=root
 spring.datasource.password=urbanAPIpassword
 server.port=8082
+springdoc.api-docs.path=/api/v1/api-spec
+springdoc.swagger-ui.path=/api/v1/api-gui.html
+springdoc.swagger-ui.operationsSorter=method
