--- a/K8S/deployments/ingress/urban-ingress.yaml
+++ b/K8S/deployments/ingress/urban-ingress.yaml
@@ -6,6 +6,7 @@ metadata:
   labels:
     name: urban-ingress
   annotations:
+    nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /api/v1/$1
 spec:
   ingressClassName: nginx
@@ -13,21 +14,21 @@ spec:
     - http:
         paths:
           - pathType: Prefix # mobility API
-            path: "/mobility/api/v1/(.*)"
+            path: /mobility/api/v1/(.*)
             backend:
               service:
                 name: mobility-api
                 port:
                   number: 8080
           - pathType: Prefix # pollution API
-            path: "/pollution/api/v1/(.*)"
+            path: /pollution/api/v1/(.*)
             backend:
               service:
                 name: pollution-api
                 port:
                   number: 8080
           - pathType: Prefix # municipal API
-            path: "/municipal/api/v1/(.*)"
+            path: /municipal/api/v1/(.*)
             backend:
               service:
                 name: municipal-api
