--- a/K8S/secrets/auth-api-secret.yaml
+++ b/K8S/secrets/auth-api-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: auth-api-secret
+  namespace: urban
 type: Opaque
 data:
   auth-key: QVVUSF9BUElfS0VZX0s4Uw== # AUTH_API_KEY_K8S
