--- a/K8S/secrets/municipal-api-secret.yaml
+++ b/K8S/secrets/municipal-api-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: municipal-api-secret
+  namespace: urban
 type: Opaque
 data:
   admin-token: ZXlKMGVYQWlPaUpLVjFRaUxDSmhiR2NpT2lKSVV6STFOaUo5LmV5SnpkV0lpT2lJeElpd2ljbTlzWlNJNklsSlBURVZmUVVSTlNVNGlMQ0pwYzNNaU9pSnpaWEp6YjIxdmJpSXNJbVY0Y0NJNk1UY3hOelk1TWpFNE9YMC5IYkJ2UUF6ZGpFU2hIZDBkYV95bHJQMnZEVnhtNGpHRHZfTjkweGxVZm44
