--- a/K8S/configmaps/apis-url-configmap.yaml
+++ b/K8S/configmaps/apis-url-configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: apis-url-configmap
+  namespace: urban
 data:
   aggregated-nosql-repository: http://aggregated-nosql-repository:8080/api/v1
   auth-api: http://auth-api:8080/api/v1
