--- a/K8S/persistentVolumes/mongo-mobility-pv-local.yaml
+++ b/K8S/persistentVolumes/mongo-mobility-pv-local.yaml
@@ -13,4 +13,4 @@ spec:
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/data/mongo/mobility"
+    path: "/persistentvolumes/mongo/mobility"
