--- a/K8S/persistentVolumes/mysql-mobility-pv-local.yaml
+++ b/K8S/persistentVolumes/mysql-mobility-pv-local.yaml
@@ -13,4 +13,4 @@ spec:
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/data/mysql/mobility"
+    path: "/persistentvolumes/mysql/mobility"
